[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
strict = true
warn_unused_configs = true
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version="py311"
src = ["src"]
include = ["src/**.py"]
lint.select = [
    "ALL"
]
lint.ignore = [
    "ARG",
    "ANN",
    "D",
    "EM101",
    "EM102",
    "PT001",
    "PT023",
    "SIM108",
    "SIM114",
    "TRY003",
    "PLW2901",
    "RET505",
    "PLR0913",
    "S101",
    "S608",
    "SIM117",
    "S105",
    "TCH003",
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[project]
name = "myasync"
version = "0.0.0"
authors = [
    { name = "Sequew", email = "kryseyt@gmail.com" },
]
description = "Chat with Clean Architecture, TDD and more"
requires-python = ">=3.11"
[project.optional-dependencies]
example = [
    "fastapi",
    "uvicorn",
]

lint = [
    "ruff",
]

types-checking = [
    "mypy",
]

dev = [
    "just_chat[lint, types-checking]",
]

[project.urls]
"Homepage" = "https://github.com/KrySeyt/myasync"
